--- a/app/src/main/res/layout/informacion_solicitante.xml
+++ b/app/src/main/res/layout/informacion_solicitante.xml
@@ -22,7 +22,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btnGuardar"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -651,16 +651,16 @@
                     android:layout_height="wrap_content"
                     android:text="Propia" />
                 <RadioButton
-                    android:id="@+id/pagandose"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pagandose" />
-                <RadioButton
                     android:id="@+id/conFamiliares"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Vive con familiares"
                     android:textColorLink="@android:color/white"/>
+                <RadioButton
+                    android:id="@+id/pagandose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pagandose" />
             </RadioGroup>
 
             <TextView
