--- a/app/src/main/res/layout/catalogo_foto.xml
+++ b/app/src/main/res/layout/catalogo_foto.xml
@@ -32,4 +32,14 @@
             android:textColor="#000"
             android:text="IFE(Click)" />
     </RelativeLayout>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="104dp" />
+
 </RelativeLayout>
