--- a/app/src/main/res/layout/firma_solicitante.xml
+++ b/app/src/main/res/layout/firma_solicitante.xml
@@ -15,17 +15,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content">
-      <!--  <TextView
-            android:id="@+id/permisos"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/autorizacion"/>-->
-        <Button
-            android:id="@+id/cancel"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:text="Cancel"/>
 
         <Button
             android:id="@+id/clear"
@@ -46,7 +35,7 @@
         android:layout_below="@id/linearLayout2"
         android:layout_width="match_parent">
 
-        <TableRow
+        <!--<TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -68,7 +57,7 @@
                 android:maxLength="30">
                 <requestFocus />
             </EditText>
-        </TableRow>
+        </TableRow>-->
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="wrap_content"
@@ -85,8 +74,7 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:id="@+id/textView3"
-                android:text="Please Sign below ..."
-                android:maxLength="30"
+                android:text="Firma de autorización para investigación de datos perosonales."
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="wrap_content" />
         </TableRow>
