--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimary">#00B0C0</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#5C6BC0</color>
     <color name="colorCardContrast">#ECEFEF</color>
