no mames ya no quiero seguirle ya me quiero ir a la mierda XD

--- a/app/src/main/res/layout/informacion_laboral.xml
+++ b/app/src/main/res/layout/informacion_laboral.xml
@@ -48,6 +48,7 @@
                 android:padding="7dp"
                 android:background="@drawable/my_comment"
                 android:inputType="text"
+                android:text=""
                 android:alpha="0.5"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -105,6 +106,7 @@
                 android:padding="7dp"
                 android:background="@drawable/my_comment"
                 android:inputType="text"
+                android:text=""
                 android:alpha="0.5"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -128,6 +130,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -156,6 +159,7 @@
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
+                android:text=""
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:hint="@string/comments" />
@@ -181,6 +185,7 @@
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
+                android:text=""
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:hint="@string/comments" />
@@ -203,6 +208,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -228,6 +234,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -256,6 +263,7 @@
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
+                android:text=""
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:hint="@string/comments" />
@@ -278,6 +286,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -306,6 +315,7 @@
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
+                android:text=""
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:hint="@string/comments" />
@@ -328,6 +338,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="number"
                 android:alpha="0.5"
@@ -376,6 +387,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="number"
                 android:alpha="0.5"
@@ -456,6 +468,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="number"
                 android:alpha="0.5"
@@ -481,6 +494,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -506,6 +520,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -531,6 +546,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
@@ -556,6 +572,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="number"
                 android:alpha="0.5"
@@ -581,6 +598,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="number"
                 android:alpha="0.5"
@@ -606,6 +624,7 @@
                 android:layout_height="match_parent"
                 android:textSize="20sp"
                 android:padding="7dp"
+                android:text=""
                 android:background="@drawable/my_comment"
                 android:inputType="text"
                 android:alpha="0.5"
